Fixed edge-case: query sequence too short

--- a/design/static/design/css/index.css
+++ b/design/static/design/css/index.css
@@ -42,6 +42,11 @@ input[type="number"] {
   border-radius: 5px;
   text-align: center;
 }
+.errorlist {
+  color: yellow;
+  font-size: 1.25rem;
+  list-style-type: none;
+}
 .small {
   font-size: 1rem;
 }
